# vectorctl

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: generic.rs  qdrant.rs
cli/: Cargo.toml
cli/src/: cli.rs
cli/src/commands/: migrate.rs  mod.rs
examples/qdrant_example/: Cargo.toml  docker-compose.yaml
examples/qdrant_example/src/: lib.rs  main.rs  version_20250522_145910_init_migration.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/derives/: migration.rs  migrator.rs  mod.rs
migration/: Cargo.toml
migration/src/: cli.rs  context.rs  lib.rs  migrator.rs  revision.rs
qdrant-tools-cli/: Cargo.toml
qdrant-tools-cli/src/: cli.rs
qdrant-tools-cli/src/commands/: migrate.rs  mod.rs
qdrant-tools-macros/: Cargo.toml
qdrant-tools-macros/src/derives/: migration.rs
qdrant-tools-migration/: Cargo.toml
qdrant-tools-migration/src/: cli.rs  lib.rs  migrator.rs
src/: lib.rs
template/: Cargo.toml
template/assets/migration/: Cargo.toml.hbs
template/assets/migration/src/: lib.rs  main.rs.hbs  version_20250101_011111_init_migration.rs
template/assets/revision/: {{filename}}.rs.hbs
template/src/: lib.rs  migration.rs  registry.rs
vectorctl-backend/: Cargo.toml
vectorctl-backend/src/: lib.rs
vectorctl-cli/: Cargo.toml
vectorctl-cli/proptest-regressions/commands/: migrate.txt
vectorctl-cli/src/: cli.rs
vectorctl-cli/src/commands/: migrate.rs  mod.rs
vectorctl-macros/: Cargo.toml
vectorctl-migration/: Cargo.toml
vectorctl-migration/src/: cli.rs  context.rs  lib.rs  migrator.rs  revision.rs
vectorctl-template/: Cargo.toml
vectorctl-template/assets/migration/: Cargo.toml.hbs
vectorctl-template/assets/migration/src/: main.rs.hbs
vectorctl-template/assets/migrator/: lib.rs.hbs
vectorctl-template/src/: migration.rs  migrator.rs  revision.rs
