[package]
name = "vectorctl"
version = "0.1.0"
edition = "2024"
publish = false
license-file = "LICENSE"

[workspace]

resolver = "2"
members = [
  "backend",
  "cli",
  "macros",
  "migration",
  "template",
  "examples/qdrant_example",
]
default-members = ["macros", "migration", "template", "."]


[dependencies]
backend = { path = "backend", optional = true, default-features = false }
cli = { path = "cli", optional = true, default-features = false }
macros = { path = "macros", optional = true }
migration = { path = "migration", optional = true, default-features = false }

[features]
default = []

qdrant-backend = ["backend/qdrant-backend", "migration/qdrant-backend"]
sea-backend = ["migration/sea-backend"]

cli = ["dep:cli"]
macros = ["dep:macros"]
migration = ["dep:migration"]
