[package]
name = "vectorctl"
version = "0.1.0"
edition = "2024"
publish = false
license-file = "LICENSE"

[workspace]

resolver = "2"
members = [
  ".",
  "vectorctl-backend",
  "vectorctl-macros",
  "vectorctl-migration",
  "vectorctl-cli",
  "vectorctl-template",
  "examples/qdrant_example",
]
default-members = ["vectorctl-macros", "vectorctl-template", "."]


[dependencies]
vectorctl-backend = { path = "vectorctl-backend", optional = true, default-features = false }
vectorctl-cli = { path = "vectorctl-cli", optional = true, default-features = false }
vectorctl-macros = { path = "vectorctl-macros", optional = true }
vectorctl-migration = { path = "vectorctl-migration", optional = true, default-features = false }

[features]
default = []

qdrant-backend = [
  "dep:vectorctl-backend",
  "vectorctl-backend/qdrant-backend",
  "vectorctl-migration/qdrant-backend",
]
sea-backend = ["vectorctl-migration/sea-backend"]

cli = ["dep:vectorctl-cli"]
macros = ["dep:vectorctl-macros"]
migration = ["dep:vectorctl-migration"]
