[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
uuid = { version = "1.16", features = ["atomic", "v7", "zerocopy"] }
async-trait = "0.1"
qdrant-client = { version = "1.14", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"

[features]

qdrant-backend = ["qdrant-client", "serde_json", "serde", "chrono"]
