[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
template = { path = "../template" }
quote = "1.0.40"
syn = { version = "2", default-features = false, features = [
  "full",
  "parsing",
] }
proc-macro2 = "1.0.95"
chrono = { version = "0.4.41", features = ["clock"] }
tokio = { version = "1.45.0", features = ["fs", "macros"] }
thiserror = "2.0.12"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
prettyplease = "0.2.32"
url = { version = "2.5.4", features = ["serde"] }
qdrant-client = "1.14.0"
base64 = "0.22.1"
rand = { version = "0.9.1", features = ["os_rng"] }

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/main.rs"

[dev-dependencies]
proptest = "1.6.0"
regex = "1.11.1"
tempfile = "3.20.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
