[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
template = { path = "../template" }
syn = { version = "2", default-features = false, features = [
  "full",
  "parsing",
] }
chrono = { version = "0.4.41", features = ["clock"] }
tokio = { version = "1.45.0", features = ["fs", "macros"] }
thiserror = "2.0.12"
clap = { version = "4.5.38", features = ["derive", "env"] }
url = { version = "2.5.4", features = ["serde"] }
qdrant-client = "1.14.0"
base64 = "0.22.1"
rand = { version = "0.9.1", features = ["os_rng"] }

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "vectorctl"
path = "src/bin/main.rs"

[dev-dependencies]
proptest = "1.6.0"
regex = "1.11.1"
tempfile = "3.20.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
