[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cli = { path = "../cli" }
backend = { path = "../backend" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
qdrant-client = { version = "1.14", features = ["serde"], optional = true }
sea-orm = { version = "1.1", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
fnv = "1.0.7"
uuid = { version = "1.16", features = ["atomic", "v7", "zerocopy"] }
once_cell = "1.21"
rustc-hash = "2.0"
futures = "0.3"
tinyvec = "*"

[features]
default = ["qdrant-backend"]
qdrant-backend = ["backend/qdrant-backend"]
sea-backend = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-postgres"]
