[package]
name = "template"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_builder = "0.20.2"
handlebars = { version = "6.3.2", features = ["rust-embed"] }
lazy-regex = "3.4.1"
once_cell = "1.21.3"
rayon = "1.10.0"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"
