[package]
name = "vectorctl-backend"
version = "0.1.0"
edition = "2024"
publish = false
license-file = "../LICENSE"

[lib]
name = "vectorctl_backend"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
uuid = { version = "1.16", features = ["atomic", "v7", "zerocopy"] }
async-trait = "0.1"
qdrant-client = { version = "1.14", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"

[features]

qdrant-backend = [
  "dep:qdrant-client",
  "dep:serde_json",
  "dep:serde",
  "dep:chrono",
]
