[package]
name = "vectorctl-cli"
version = "0.1.0"
license-file = { workspace = true }
edition = "2024"

[dependencies]
vectorctl-template = { path = "../vectorctl-template" , version = "0.1.0" }
syn = { version = "2", default-features = false, features = [
  "full",
  "parsing",
] }
chrono = { version = "0.4", features = ["clock"] }
tokio = { version = "1.45", features = ["fs", "macros"] }
tokio-stream = { version = "0.1.1", features = ["fs"] }
thiserror = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
url = { version = "2.5", features = ["serde"] }
qdrant-client = "1.16"
base64 = "0.22"
rand = { version = "0.9", features = ["os_rng"] }

[lib]
name = "vectorctl_cli"
path = "src/lib.rs"

[[bin]]
name = "vectorctl"
path = "src/bin/main.rs"

[dev-dependencies]
proptest = "1.6.0"
regex = "1.11.1"
tempfile = "3.20.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = { version = "0.1.1", features = ["fs"] }
