[package]
name = "vectorctl-macros"
version = { workspace = true }
license-file = { workspace = true }
edition = "2024"

[dependencies]
lazy-regex = { version = "3.4.1", features = ["perf"] }
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"

[lib]
name = "vectorctl_macros"
path = "src/lib.rs"
proc-macro = true
