[package]
name = "vectorctl-template"
version = "0.1.0"
license-file = { workspace = true }
edition = "2024"

[lib]
name = "vectorctl_template"
path = "src/lib.rs"

[dependencies]
derive_builder = "0.20"
handlebars = { version = "6.3", features = ["rust-embed"] }
lazy-regex = "3.4"
once_cell = "1.21"
rayon = "1.10"
rust-embed = "8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
