[workspace]
# A separate workspace

[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[dependencies]
vectorctl = { git = "https://github.com/aqora-io/vectorctl", branch = "main", features = [
  "migration",
  "macros",
] }
async-trait = "0.1"
tokio = "1.45.0"
qdrant-client = "1.14.0"
