[package]
name = "qdrant_exemple"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
tokio = "1.45.0"
qdrant-client = "1.16"
anyhow = "1"

[dependencies.vectorctl]
path = "../../"
features = ["macros", "migration", "qdrant-backend"]

[features]
qdrant-backend = ["vectorctl/qdrant-backend"]
macros = ["vectorctl/macros"]
migration = ["vectorctl/migration"]
